# OpenHands-Server

./: .gitignore  .pre-commit-config.yaml  Makefile  PORTED_ROUTES_SUMMARY.md  README.md  build.py  pyproject.toml
.github/workflows/: tests.yml
openhands_server/: DATABASE.md  __init__.py  app.py  config.py  database.py  main.py
openhands_server/event/: event_context.py  event_models.py  event_service.py  read_only_event_context.py  read_only_event_service.py
openhands_server/git/: git_models.py
openhands_server/local_conversation/: README.md  agent_info.py  default_local_conversation_service.py  local_conversation.py  local_conversation_event_context.py  local_conversation_event_router.py  local_conversation_event_service.py  local_conversation_models.py  local_conversation_router.py  local_conversation_service.py  stored_metrics_snapshot.py  tool_info.py
openhands_server/local_server/: __main__.py  local_api.py  local_server_config.py
openhands_server/models/: __init__.py  user.py
openhands_server/sandbox/: README.md  docker_sandbox_service.py  sandbox_errors.py  sandbox_models.py  sandbox_router.py  sandbox_service.py
openhands_server/sandbox_spec/: docker_sandbox_spec_service.py  sandbox_spec_models.py  sandbox_spec_router.py  sandbox_spec_service.py
openhands_server/sandboxed_conversation/: docker_sandboxed_conversation_service.py  sandboxed_conversation_models.py  sandboxed_conversation_router.py  sandboxed_conversation_service.py  sandboxed_database_models.py
openhands_server/sdk_server/: __main__.py  api.py  config.py  conversation_router.py  conversation_service.py  event_router.py  event_service.py  middleware.py  models.py  pub_sub.py
openhands_server/user/: user_context.py  user_dependencies.py  user_models.py
openhands_server/utils/: auth.py  conversation_executor.py  import_utils.py  middleware.py  pub_sub.py
tests/: __init__.py  test_dummy.py
