[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "openhands-server"
version = "0.1.0"
description = "OpenHands Server - REST/WebSocket interface for OpenHands AI Agent"
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "OpenHands Team", email = "contact@all-hands.dev" } ]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "aiosqlite>=0.19",
  "alembic>=1.13",
  "docker>=7.1,<8",
  "fastapi>=0.104",
  "openhands-sdk @ git+https://github.com/All-Hands-AI/agent-sdk.git@b63f92733928c4994d0edc30abd6373d6ef03ef0#subdirectory=openhands/sdk",
  "openhands-tools @ git+https://github.com/All-Hands-AI/agent-sdk.git@b63f92733928c4994d0edc30abd6373d6ef03ef0#subdirectory=openhands/tools",
  "pydantic>=2",
  "sqlalchemy>=2",
  "uvicorn>=0.31.1",
  "websockets>=12",
]

optional-dependencies.dev = [
  "black>=23",
  "flake8>=6",
  "httpx>=0.25",
  "isort>=5",
  "mypy>=1",
  "pre-commit>=3.7",
  "pytest>=7",
  "pytest-asyncio>=0.21",
  "ruff>=0.11.8",
]
scripts.openhands-server = "openhands_server.main:main"

[dependency-groups]
dev = [
  "httpx>=0.25",
  "pre-commit>=4.3",
  "pycodestyle>=2.12",
  "pyinstaller>=6.15",
  "pyright>=1.1.405",
  "pytest>=8.4.1",
  "pytest-asyncio>=0.21",
  "ruff>=0.12.10",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [ "openhands_server" ]

# Ruff configuration

[tool.ruff]
target-version = "py312"
line-length = 88

format.indent-style = "space"
format.quote-style = "double"
lint.select = [ "E", "F", "I" ]
lint.isort.combine-as-imports = true
lint.isort.force-single-line = false
lint.isort.known-first-party = [ "openhands" ]
lint.isort.lines-after-imports = 2

[tool.uv.sources]
openhands-sdk = { git = "https://github.com/All-Hands-AI/agent-sdk.git", subdirectory = "openhands/sdk", rev = "b63f92733928c4994d0edc30abd6373d6ef03ef0" }
openhands-tools = { git = "https://github.com/All-Hands-AI/agent-sdk.git", subdirectory = "openhands/tools", rev = "b63f92733928c4994d0edc30abd6373d6ef03ef0" }
